--- a/custom_components/cem_monitor/translations/en.json
+++ b/custom_components/cem_monitor/translations/en.json
@@ -7,7 +7,8 @@
         "description": "Enter your CEM credentials.",
         "data": {
           "username": "Username",
-          "password": "Password"
+          "password": "Password",
+          "verify_ssl": "Verify SSL Certificate"
         }
       },
       "select_counters": {
@@ -27,7 +28,8 @@
       "fetch_failed": "Failed to fetch objects, meters, or counters from CEM API. Please try again.",
       "no_counters_available": "No counters are available for selection. Please check your CEM account.",
       "no_counters_selected": "Please select at least one counter to monitor.",
-      "invalid_counter_selection": "Invalid counter selection. Please try again."
+      "invalid_counter_selection": "Invalid counter selection. Please try again.",
+      "ssl_certificate_error": "SSL certificate verification failed. You can disable SSL verification below, but this is a security risk."
     }
   },
   "options": {
@@ -37,7 +39,8 @@
         "description": "Select the counters you want to monitor and configure the update interval. The tree shows Objects → Meters → Counters.",
         "data": {
           "selected_counters": "Counters",
-          "counter_update_interval_minutes": "Counter Update Interval (minutes)"
+          "counter_update_interval_minutes": "Counter Update Interval (minutes)",
+          "verify_ssl": "Verify SSL Certificate"
         }
       }
     },
@@ -48,7 +51,8 @@
       "unknown": "Unexpected error occurred. Please try again.",
       "fetch_failed": "Failed to fetch objects, meters, or counters from CEM API. Please try again.",
       "no_counters_available": "No counters are available for selection. Please check your CEM account.",
-      "invalid_counter_selection": "Invalid counter selection. Please try again."
+      "invalid_counter_selection": "Invalid counter selection. Please try again.",
+      "ssl_certificate_error": "SSL certificate verification failed. The server's certificate doesn't match the hostname. Uncheck 'Verify SSL Certificate' below to disable verification and continue (this is a security risk)."
     }
   }
 }
